fix(newsletter): update newslater design and add error messages

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -13,3 +13,5 @@ en:
       subscriber:
         success: Thanks! you've been successfully subscribed
         failure: There was a problem processing your sign-up
+        email_not_enter: Email Must be entered
+        email_available: Email already entered
